kubernetes/qr-generator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qr-generator
  namespace: qr-generator
spec:
  selector:
    app: qr-generator
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
